y.output
Terminals unused in grammar

    STRING


State 123 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | Program Program_piece

    3 Program_piece: function_declaration ';'
    4              | Function
    5              | Variable_declaration

    6 function_declaration: EXTERN Type Functionhead_list
    7                     | Type Functionhead_list
    8                     | EXTERN VOID Functionhead_list
    9                     | VOID Functionhead_list
   10                     | EXTERN Functionhead_list

   11 Functionhead_list: Functionhead
   12                  | Functionhead_list ',' Functionhead

   13 Functionhead: ID '(' Param_types ')'

   14 Function: Functionhead '{' Functionbody '}'
   15         | VOID Functionhead '{' Functionbody '}'
   16         | Type Functionhead '{' Functionbody '}'

   17 Functionbody: Varlist Stmtlist

   18 Varlist: %empty
   19        | Varlist Variable_declaration

   20 Variable_declaration: Type IDlist ';'

   21 Stmtlist: %empty
   22         | Stmtlist Statement

   23 Param_types: Param_type
   24            | Param_types ',' Param_type

   25 Param_type: Type Identifier
   26           | Type Identifier '{' '}'
   27           | VOID

   28 Type: CHAR
   29     | INT

   30 Statement: ';'
   31          | IF Expression Statement
   32          | IF Expression Statement ELSE Statement
   33          | WHILE Expression Statement
   34          | Forloop
   35          | RETURN Expression ';'
   36          | RETURN ';'
   37          | Assignment ';'
   38          | Functioncall ';'
   39          | '{' Stmtlist '}'

   40 Assignment: Identifier '=' Expression

   41 Expression: NOT Expression
   42           | MINUS Expression
   43           | Expression PLUS Expression
   44           | Expression MINUS Expression
   45           | Expression MUL Expression
   46           | Expression DIV Expression
   47           | Expression EQ Expression
   48           | Expression NOTEQ Expression
   49           | Expression LTEQ Expression
   50           | Expression LT Expression
   51           | Expression GTEQ Expression
   52           | Expression GT Expression
   53           | Expression AND Expression
   54           | Expression OR Expression
   55           | Functioncall
   56           | Identifier
   57           | '(' Expression ')'
   58           | INTCON
   59           | CHARCON
   60           | STRINGCON

   61 Functioncall: ID '(' ')'
   62             | ID '(' Parameterlist ')'

   63 IDlist: Identifier
   64       | IDlist ',' Identifier

   65 Identifier: ID
   66           | ID '[' Expression ']'
   67           | ID '[' ']'

   68 Parameterlist: Expression
   69              | Parameterlist ',' Expression

   70 Forloop: FOR '(' Assignment ';' Expression ';' Assignment ')' Statement
   71        | FOR '(' Assignment ';' Expression ';' ')' Statement
   72        | FOR '(' Assignment ';' ';' Assignment ')' Statement
   73        | FOR '(' ';' Expression ';' Assignment ')' Statement
   74        | FOR '(' Assignment ';' ';' ')' Statement
   75        | FOR '(' ';' Expression ';' ')' Statement
   76        | FOR '(' ';' ';' Assignment ')' Statement
   77        | FOR '(' ';' ';' ')' Statement


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 13 57 61 62 70 71 72 73 74 75 76 77
    ')' (41) 13 57 61 62 70 71 72 73 74 75 76 77
    ',' (44) 12 24 64 69
    ';' (59) 3 20 30 35 36 37 38 70 71 72 73 74 75 76 77
    '=' (61) 40
    '[' (91) 66 67
    ']' (93) 66 67
    '{' (123) 14 15 16 26 39
    '}' (125) 14 15 16 26 39
    error (256)
    ID <charVal> (258) 13 61 62 65 66 67
    CHARCON (259) 59
    STRINGCON (260) 60
    IF (261) 31 32
    ELSE (262) 32
    RETURN (263) 35 36
    WHILE (264) 33
    FOR (265) 70 71 72 73 74 75 76 77
    VOID (266) 8 9 15 27
    EXTERN (267) 6 8 10
    CHAR (268) 28
    INT (269) 29
    INTCON (270) 58
    STRING (271)
    AND (272) 53
    OR (273) 54
    LT (274) 50
    GT (275) 52
    GTEQ (276) 51
    LTEQ (277) 49
    PLUS (278) 43
    EQ (279) 47
    NOTEQ (280) 48
    MUL (281) 45
    DIV (282) 46
    NOT (283) 41
    MINUS (284) 42 44


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Program (40)
        on left: 1 2
        on right: 0 2
    Program_piece (41)
        on left: 3 4 5
        on right: 2
    function_declaration (42)
        on left: 6 7 8 9 10
        on right: 3
    Functionhead_list (43)
        on left: 11 12
        on right: 6 7 8 9 10 12
    Functionhead <functionNode> (44)
        on left: 13
        on right: 11 12 14 15 16
    Function (45)
        on left: 14 15 16
        on right: 4
    Functionbody <statementNode> (46)
        on left: 17
        on right: 14 15 16
    Varlist (47)
        on left: 18 19
        on right: 17 19
    Variable_declaration (48)
        on left: 20
        on right: 5 19
    Stmtlist <statementNode> (49)
        on left: 21 22
        on right: 17 22 39
    Param_types <parameterNode> (50)
        on left: 23 24
        on right: 13 24
    Param_type <parameterNode> (51)
        on left: 25 26 27
        on right: 23 24
    Type (52)
        on left: 28 29
        on right: 6 7 16 20 25 26
    Statement <statementNode> (53)
        on left: 30 31 32 33 34 35 36 37 38 39
        on right: 22 31 32 33 70 71 72 73 74 75 76 77
    Assignment <assignmentNode> (54)
        on left: 40
        on right: 37 70 71 72 73 74 76
    Expression <expressionNode> (55)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 31 32 33 35 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 57 66 68 69 70 71 73 75
    Functioncall <functionNode> (56)
        on left: 61 62
        on right: 38 55
    IDlist (57)
        on left: 63 64
        on right: 20 64
    Identifier <idVal> (58)
        on left: 65 66 67
        on right: 25 26 40 56 63 64
    Parameterlist (59)
        on left: 68 69
        on right: 62 69
    Forloop (60)
        on left: 70 71 72 73 74 75 76 77
        on right: 34


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Program)

    Program  go to state 1


State 1

    0 $accept: Program . $end
    2 Program: Program . Program_piece

    $end    shift, and go to state 2
    ID      shift, and go to state 3
    VOID    shift, and go to state 4
    EXTERN  shift, and go to state 5
    CHAR    shift, and go to state 6
    INT     shift, and go to state 7

    Program_piece         go to state 8
    function_declaration  go to state 9
    Functionhead          go to state 10
    Function              go to state 11
    Variable_declaration  go to state 12
    Type                  go to state 13


State 2

    0 $accept: Program $end .

    $default  accept


State 3

   13 Functionhead: ID . '(' Param_types ')'

    '('  shift, and go to state 14


State 4

    9 function_declaration: VOID . Functionhead_list
   15 Function: VOID . Functionhead '{' Functionbody '}'

    ID  shift, and go to state 3

    Functionhead_list  go to state 15
    Functionhead       go to state 16


State 5

    6 function_declaration: EXTERN . Type Functionhead_list
    8                     | EXTERN . VOID Functionhead_list
   10                     | EXTERN . Functionhead_list

    ID    shift, and go to state 3
    VOID  shift, and go to state 17
    CHAR  shift, and go to state 6
    INT   shift, and go to state 7

    Functionhead_list  go to state 18
    Functionhead       go to state 19
    Type               go to state 20


State 6

   28 Type: CHAR .

    $default  reduce using rule 28 (Type)


State 7

   29 Type: INT .

    $default  reduce using rule 29 (Type)


State 8

    2 Program: Program Program_piece .

    $default  reduce using rule 2 (Program)


State 9

    3 Program_piece: function_declaration . ';'

    ';'  shift, and go to state 21


State 10

   14 Function: Functionhead . '{' Functionbody '}'

    '{'  shift, and go to state 22


State 11

    4 Program_piece: Function .

    $default  reduce using rule 4 (Program_piece)


State 12

    5 Program_piece: Variable_declaration .

    $default  reduce using rule 5 (Program_piece)


State 13

    7 function_declaration: Type . Functionhead_list
   16 Function: Type . Functionhead '{' Functionbody '}'
   20 Variable_declaration: Type . IDlist ';'

    ID  shift, and go to state 23

    Functionhead_list  go to state 24
    Functionhead       go to state 25
    IDlist             go to state 26
    Identifier         go to state 27


State 14

   13 Functionhead: ID '(' . Param_types ')'

    VOID  shift, and go to state 28
    CHAR  shift, and go to state 6
    INT   shift, and go to state 7

    Param_types  go to state 29
    Param_type   go to state 30
    Type         go to state 31


State 15

    9 function_declaration: VOID Functionhead_list .
   12 Functionhead_list: Functionhead_list . ',' Functionhead

    ','  shift, and go to state 32

    $default  reduce using rule 9 (function_declaration)


State 16

   11 Functionhead_list: Functionhead .
   15 Function: VOID Functionhead . '{' Functionbody '}'

    '{'  shift, and go to state 33

    $default  reduce using rule 11 (Functionhead_list)


State 17

    8 function_declaration: EXTERN VOID . Functionhead_list

    ID  shift, and go to state 3

    Functionhead_list  go to state 34
    Functionhead       go to state 19


State 18

   10 function_declaration: EXTERN Functionhead_list .
   12 Functionhead_list: Functionhead_list . ',' Functionhead

    ','  shift, and go to state 32

    $default  reduce using rule 10 (function_declaration)


State 19

   11 Functionhead_list: Functionhead .

    $default  reduce using rule 11 (Functionhead_list)


State 20

    6 function_declaration: EXTERN Type . Functionhead_list

    ID  shift, and go to state 3

    Functionhead_list  go to state 35
    Functionhead       go to state 19


State 21

    3 Program_piece: function_declaration ';' .

    $default  reduce using rule 3 (Program_piece)


State 22

   14 Function: Functionhead '{' . Functionbody '}'

    $default  reduce using rule 18 (Varlist)

    Functionbody  go to state 36
    Varlist       go to state 37


State 23

   13 Functionhead: ID . '(' Param_types ')'
   65 Identifier: ID .
   66           | ID . '[' Expression ']'
   67           | ID . '[' ']'

    '('  shift, and go to state 14
    '['  shift, and go to state 38

    $default  reduce using rule 65 (Identifier)


State 24

    7 function_declaration: Type Functionhead_list .
   12 Functionhead_list: Functionhead_list . ',' Functionhead

    ','  shift, and go to state 32

    $default  reduce using rule 7 (function_declaration)


State 25

   11 Functionhead_list: Functionhead .
   16 Function: Type Functionhead . '{' Functionbody '}'

    '{'  shift, and go to state 39

    $default  reduce using rule 11 (Functionhead_list)


State 26

   20 Variable_declaration: Type IDlist . ';'
   64 IDlist: IDlist . ',' Identifier

    ';'  shift, and go to state 40
    ','  shift, and go to state 41


State 27

   63 IDlist: Identifier .

    $default  reduce using rule 63 (IDlist)


State 28

   27 Param_type: VOID .

    $default  reduce using rule 27 (Param_type)


State 29

   13 Functionhead: ID '(' Param_types . ')'
   24 Param_types: Param_types . ',' Param_type

    ')'  shift, and go to state 42
    ','  shift, and go to state 43


State 30

   23 Param_types: Param_type .

    $default  reduce using rule 23 (Param_types)


State 31

   25 Param_type: Type . Identifier
   26           | Type . Identifier '{' '}'

    ID  shift, and go to state 44

    Identifier  go to state 45


State 32

   12 Functionhead_list: Functionhead_list ',' . Functionhead

    ID  shift, and go to state 3

    Functionhead  go to state 46


State 33

   15 Function: VOID Functionhead '{' . Functionbody '}'

    $default  reduce using rule 18 (Varlist)

    Functionbody  go to state 47
    Varlist       go to state 37


State 34

    8 function_declaration: EXTERN VOID Functionhead_list .
   12 Functionhead_list: Functionhead_list . ',' Functionhead

    ','  shift, and go to state 32

    $default  reduce using rule 8 (function_declaration)


State 35

    6 function_declaration: EXTERN Type Functionhead_list .
   12 Functionhead_list: Functionhead_list . ',' Functionhead

    ','  shift, and go to state 32

    $default  reduce using rule 6 (function_declaration)


State 36

   14 Function: Functionhead '{' Functionbody . '}'

    '}'  shift, and go to state 48


State 37

   17 Functionbody: Varlist . Stmtlist
   19 Varlist: Varlist . Variable_declaration

    CHAR  shift, and go to state 6
    INT   shift, and go to state 7

    $default  reduce using rule 21 (Stmtlist)

    Variable_declaration  go to state 49
    Stmtlist              go to state 50
    Type                  go to state 51


State 38

   66 Identifier: ID '[' . Expression ']'
   67           | ID '[' . ']'

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    ']'        shift, and go to state 57
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 60
    Functioncall  go to state 61
    Identifier    go to state 62


State 39

   16 Function: Type Functionhead '{' . Functionbody '}'

    $default  reduce using rule 18 (Varlist)

    Functionbody  go to state 63
    Varlist       go to state 37


State 40

   20 Variable_declaration: Type IDlist ';' .

    $default  reduce using rule 20 (Variable_declaration)


State 41

   64 IDlist: IDlist ',' . Identifier

    ID  shift, and go to state 44

    Identifier  go to state 64


State 42

   13 Functionhead: ID '(' Param_types ')' .

    $default  reduce using rule 13 (Functionhead)


State 43

   24 Param_types: Param_types ',' . Param_type

    VOID  shift, and go to state 28
    CHAR  shift, and go to state 6
    INT   shift, and go to state 7

    Param_type  go to state 65
    Type        go to state 31


State 44

   65 Identifier: ID .
   66           | ID . '[' Expression ']'
   67           | ID . '[' ']'

    '['  shift, and go to state 38

    $default  reduce using rule 65 (Identifier)


State 45

   25 Param_type: Type Identifier .
   26           | Type Identifier . '{' '}'

    '{'  shift, and go to state 66

    $default  reduce using rule 25 (Param_type)


State 46

   12 Functionhead_list: Functionhead_list ',' Functionhead .

    $default  reduce using rule 12 (Functionhead_list)


State 47

   15 Function: VOID Functionhead '{' Functionbody . '}'

    '}'  shift, and go to state 67


State 48

   14 Function: Functionhead '{' Functionbody '}' .

    $default  reduce using rule 14 (Function)


State 49

   19 Varlist: Varlist Variable_declaration .

    $default  reduce using rule 19 (Varlist)


State 50

   17 Functionbody: Varlist Stmtlist .
   22 Stmtlist: Stmtlist . Statement

    ID      shift, and go to state 52
    IF      shift, and go to state 68
    RETURN  shift, and go to state 69
    WHILE   shift, and go to state 70
    FOR     shift, and go to state 71
    '{'     shift, and go to state 72
    ';'     shift, and go to state 73

    $default  reduce using rule 17 (Functionbody)

    Statement     go to state 74
    Assignment    go to state 75
    Functioncall  go to state 76
    Identifier    go to state 77
    Forloop       go to state 78


State 51

   20 Variable_declaration: Type . IDlist ';'

    ID  shift, and go to state 44

    IDlist      go to state 26
    Identifier  go to state 27


State 52

   61 Functioncall: ID . '(' ')'
   62             | ID . '(' Parameterlist ')'
   65 Identifier: ID .
   66           | ID . '[' Expression ']'
   67           | ID . '[' ']'

    '('  shift, and go to state 79
    '['  shift, and go to state 38

    $default  reduce using rule 65 (Identifier)


State 53

   59 Expression: CHARCON .

    $default  reduce using rule 59 (Expression)


State 54

   60 Expression: STRINGCON .

    $default  reduce using rule 60 (Expression)


State 55

   58 Expression: INTCON .

    $default  reduce using rule 58 (Expression)


State 56

   57 Expression: '(' . Expression ')'

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 80
    Functioncall  go to state 61
    Identifier    go to state 62


State 57

   67 Identifier: ID '[' ']' .

    $default  reduce using rule 67 (Identifier)


State 58

   41 Expression: NOT . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 81
    Functioncall  go to state 61
    Identifier    go to state 62


State 59

   42 Expression: MINUS . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 82
    Functioncall  go to state 61
    Identifier    go to state 62


State 60

   43 Expression: Expression . PLUS Expression
   44           | Expression . MINUS Expression
   45           | Expression . MUL Expression
   46           | Expression . DIV Expression
   47           | Expression . EQ Expression
   48           | Expression . NOTEQ Expression
   49           | Expression . LTEQ Expression
   50           | Expression . LT Expression
   51           | Expression . GTEQ Expression
   52           | Expression . GT Expression
   53           | Expression . AND Expression
   54           | Expression . OR Expression
   66 Identifier: ID '[' Expression . ']'

    AND    shift, and go to state 83
    OR     shift, and go to state 84
    LT     shift, and go to state 85
    GT     shift, and go to state 86
    GTEQ   shift, and go to state 87
    LTEQ   shift, and go to state 88
    PLUS   shift, and go to state 89
    EQ     shift, and go to state 90
    NOTEQ  shift, and go to state 91
    MUL    shift, and go to state 92
    DIV    shift, and go to state 93
    ']'    shift, and go to state 94
    MINUS  shift, and go to state 95


State 61

   55 Expression: Functioncall .

    $default  reduce using rule 55 (Expression)


State 62

   56 Expression: Identifier .

    $default  reduce using rule 56 (Expression)


State 63

   16 Function: Type Functionhead '{' Functionbody . '}'

    '}'  shift, and go to state 96


State 64

   64 IDlist: IDlist ',' Identifier .

    $default  reduce using rule 64 (IDlist)


State 65

   24 Param_types: Param_types ',' Param_type .

    $default  reduce using rule 24 (Param_types)


State 66

   26 Param_type: Type Identifier '{' . '}'

    '}'  shift, and go to state 97


State 67

   15 Function: VOID Functionhead '{' Functionbody '}' .

    $default  reduce using rule 15 (Function)


State 68

   31 Statement: IF . Expression Statement
   32          | IF . Expression Statement ELSE Statement

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 98
    Functioncall  go to state 61
    Identifier    go to state 62


State 69

   35 Statement: RETURN . Expression ';'
   36          | RETURN . ';'

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    ';'        shift, and go to state 99
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 100
    Functioncall  go to state 61
    Identifier    go to state 62


State 70

   33 Statement: WHILE . Expression Statement

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 101
    Functioncall  go to state 61
    Identifier    go to state 62


State 71

   70 Forloop: FOR . '(' Assignment ';' Expression ';' Assignment ')' Statement
   71        | FOR . '(' Assignment ';' Expression ';' ')' Statement
   72        | FOR . '(' Assignment ';' ';' Assignment ')' Statement
   73        | FOR . '(' ';' Expression ';' Assignment ')' Statement
   74        | FOR . '(' Assignment ';' ';' ')' Statement
   75        | FOR . '(' ';' Expression ';' ')' Statement
   76        | FOR . '(' ';' ';' Assignment ')' Statement
   77        | FOR . '(' ';' ';' ')' Statement

    '('  shift, and go to state 102


State 72

   39 Statement: '{' . Stmtlist '}'

    $default  reduce using rule 21 (Stmtlist)

    Stmtlist  go to state 103


State 73

   30 Statement: ';' .

    $default  reduce using rule 30 (Statement)


State 74

   22 Stmtlist: Stmtlist Statement .

    $default  reduce using rule 22 (Stmtlist)


State 75

   37 Statement: Assignment . ';'

    ';'  shift, and go to state 104


State 76

   38 Statement: Functioncall . ';'

    ';'  shift, and go to state 105


State 77

   40 Assignment: Identifier . '=' Expression

    '='  shift, and go to state 106


State 78

   34 Statement: Forloop .

    $default  reduce using rule 34 (Statement)


State 79

   61 Functioncall: ID '(' . ')'
   62             | ID '(' . Parameterlist ')'

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    ')'        shift, and go to state 107
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression     go to state 108
    Functioncall   go to state 61
    Identifier     go to state 62
    Parameterlist  go to state 109


State 80

   43 Expression: Expression . PLUS Expression
   44           | Expression . MINUS Expression
   45           | Expression . MUL Expression
   46           | Expression . DIV Expression
   47           | Expression . EQ Expression
   48           | Expression . NOTEQ Expression
   49           | Expression . LTEQ Expression
   50           | Expression . LT Expression
   51           | Expression . GTEQ Expression
   52           | Expression . GT Expression
   53           | Expression . AND Expression
   54           | Expression . OR Expression
   57           | '(' Expression . ')'

    AND    shift, and go to state 83
    OR     shift, and go to state 84
    LT     shift, and go to state 85
    GT     shift, and go to state 86
    GTEQ   shift, and go to state 87
    LTEQ   shift, and go to state 88
    PLUS   shift, and go to state 89
    EQ     shift, and go to state 90
    NOTEQ  shift, and go to state 91
    MUL    shift, and go to state 92
    DIV    shift, and go to state 93
    ')'    shift, and go to state 110
    MINUS  shift, and go to state 95


State 81

   41 Expression: NOT Expression .
   43           | Expression . PLUS Expression
   44           | Expression . MINUS Expression
   45           | Expression . MUL Expression
   46           | Expression . DIV Expression
   47           | Expression . EQ Expression
   48           | Expression . NOTEQ Expression
   49           | Expression . LTEQ Expression
   50           | Expression . LT Expression
   51           | Expression . GTEQ Expression
   52           | Expression . GT Expression
   53           | Expression . AND Expression
   54           | Expression . OR Expression

    MINUS  shift, and go to state 95

    $default  reduce using rule 41 (Expression)


State 82

   42 Expression: MINUS Expression .
   43           | Expression . PLUS Expression
   44           | Expression . MINUS Expression
   45           | Expression . MUL Expression
   46           | Expression . DIV Expression
   47           | Expression . EQ Expression
   48           | Expression . NOTEQ Expression
   49           | Expression . LTEQ Expression
   50           | Expression . LT Expression
   51           | Expression . GTEQ Expression
   52           | Expression . GT Expression
   53           | Expression . AND Expression
   54           | Expression . OR Expression

    MINUS  shift, and go to state 95

    $default  reduce using rule 42 (Expression)


State 83

   53 Expression: Expression AND . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 111
    Functioncall  go to state 61
    Identifier    go to state 62


State 84

   54 Expression: Expression OR . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 112
    Functioncall  go to state 61
    Identifier    go to state 62


State 85

   50 Expression: Expression LT . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 113
    Functioncall  go to state 61
    Identifier    go to state 62


State 86

   52 Expression: Expression GT . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 114
    Functioncall  go to state 61
    Identifier    go to state 62


State 87

   51 Expression: Expression GTEQ . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 115
    Functioncall  go to state 61
    Identifier    go to state 62


State 88

   49 Expression: Expression LTEQ . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 116
    Functioncall  go to state 61
    Identifier    go to state 62


State 89

   43 Expression: Expression PLUS . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 117
    Functioncall  go to state 61
    Identifier    go to state 62


State 90

   47 Expression: Expression EQ . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 118
    Functioncall  go to state 61
    Identifier    go to state 62


State 91

   48 Expression: Expression NOTEQ . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 119
    Functioncall  go to state 61
    Identifier    go to state 62


State 92

   45 Expression: Expression MUL . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 120
    Functioncall  go to state 61
    Identifier    go to state 62


State 93

   46 Expression: Expression DIV . Expression

    ID         shift, and go to state 52
    CHARCON    shift, and go to state 53
    STRINGCON  shift, and go to state 54
    INTCON     shift, and go to state 55
    '('        shift, and go to state 56
    NOT        shift, and go to state 58
    MINUS      shift, and go to state 59

    Expression    go to state 121
    Functioncall  go to state 61
    Identifier    go to state 62


State 94

   66 Identifier: ID '[' Expression ']' .
